2006-04-17  Brian Warner  <warner@lothar.com>

	* all: use isinstance() instead of 'type(x) is foo', suggested by
	Neal Norwitz

	* buildbot/process/process_twisted.py (QuickTwistedBuildFactory):
	oops, fix a brain-fade from the other week, when making the
	addStep changes. I changed all the __init__ upcalls to use the
	wrong superclass name.
	(FullTwistedBuildFactory.__init__): same
	(TwistedDebsBuildFactory.__init__): same
	(TwistedReactorsBuildFactory.__init__): same
	(TwistedBuild.isFileImportant): use .startswith for clarity,
	thanks to Neal Norwitz for the suggestions.

	* contrib/viewcvspoll.py: script to poll a viewcvs database for
	changes, then deliver them over PB to a remote buildmaster.

	* contrib/svnpoller.py: added script by John Pye to poll a remote
	SVN repository (by running 'svn log') from a cronjob, and run
	'buildbot sendchange' to deliver the changes to a remote
	buildmaster.
	* contrib/svn_watcher.py: added script by Niklaus Giger (a
	modification of svnpoller.py), same purpose, but this one loops
	internally (rather than expecting to run from a cronjob) and works
	under windows.
	* contrib/README.txt: same

2006-04-11  Brian Warner  <warner@lothar.com>

	* all: fix a number of incorrect names and missing imports, thanks
	to Anthony Baxter for the patch.
	* buildbot/status/html.py (WaterfallStatusResource.statusToHTML): 
	remove unused buggy method.
	* buildbot/status/builder.py (BuildStatus.saveYourself): rmtree
	comes from shutil, not "shutils"
	* buildbot/process/step.py (TreeSize.evaluateCommand): fix bad name
	(Arch.checkSlaveVersion): same
	* buildbot/process/step_twisted.py (Trial.commandComplete): same, in
	some disabled code
	* buildbot/process/step_twisted2.py: add some missing imports
	* buildbot/twcompat.py (_deferGenerator): fix cut-and-paste error,
	this code used to live in twisted.internet.defer

2006-04-10  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py (Mercurial): add Mercurial support